fixed group photo on about page that was not responsive

--- a/src/components/AboutPageContent/aboutPageContent.module.css
+++ b/src/components/AboutPageContent/aboutPageContent.module.css
@@ -78,7 +78,8 @@ h4 {
   flex-direction: row;
 }
 
-.socPic {
+.socPic,
+#socGroupPic {
   height: auto;
   width: 45%;
   border-radius: 20px;
